--- a/views/guestpage/search_menu.html
+++ b/views/guestpage/search_menu.html
@@ -2,7 +2,6 @@
     <header>
         <a href="#" id="toggleSearchMenu"><span class="icon white-close"></span></a>
         <h2>Search</h2>
-        <a href="#" id="openInTelescope">Open in Telescope</a>
         <ul id="selectSource">
             <li class="trigger">Everything <span class="icon blue-chevron-down"></span></li>
             <li data-value="text">Text</li>
@@ -10,12 +9,13 @@
             <li data-value="audio">Audio</li>
         </ul>
         <ul id="selectType">
-            <li class="trigger">Everything <span class="icon blue-chevron-down"></span></li>
+            <li class="trigger">Everywhere <span class="icon blue-chevron-down"></span></li>
             <li data-value="universe">the Universe</li>
             <li data-value="web">the Web</li>
         </ul>
         <input type="text" placeholder="search" id="searchField">
         <span class="icon blue-search"></span>
+        <a href="#" id="openInTelescope" style="line-height: 40px;margin-left: 3px"><span class="icon white-search" style="margin-bottom: -8px;"></span>&nbsp;Open in Telescope</a>
     </header>
     <div id="loadingArea">
         
