--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -378,7 +378,7 @@ span.icon.blue-chevron-down {}
 }
 #searchMenu, #searchMenu a, #searchMenu a:link, #searchMenu a:visited{
     color: #fefefe;
-    font-size: 20px; /* NÃƒÆ’Ã‚Â¤herungswert aufgrund einer Schriftersetzung */
+    font-size: 20px; /* NÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¤herungswert aufgrund einer Schriftersetzung */
     font-weight: 300;
     text-align: left;
 }
@@ -481,7 +481,7 @@ span.icon.blue-chevron-down {}
 .resultList li:hover .icon.dark{
     display:none;
 }
-#searchMenu .loadAll,Ãƒâ€šÃ‚Â #searchMenu .loadAll{
+#searchMenu .loadAll,ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â #searchMenu .loadAll{
     font-size: 14px;
     margin-top: 15px;
     text-align:right;
@@ -1867,7 +1867,7 @@ color: #FFF;
     margin-right: 20px;
 }
 
-#mailListÃƒâ€šÃ‚Â {
+#mailListÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â {
     width: 450px;
     margin-left: 150px;
 }
@@ -1907,7 +1907,7 @@ color: #FFF;
 	line-height: 8px;
 }
 
-#buddyListTableÃƒâ€šÃ‚Â { 
+#buddyListTableÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â { 
     overflow: none;
 }
     
@@ -2082,7 +2082,7 @@ color: #FFF;
     margin: 0px;
 }
 
-#feedTableÃƒâ€šÃ‚Â { 
+#feedTableÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â { 
     overflow: none;
 }
 
@@ -2602,6 +2602,12 @@ ul .elementSettings {
     background-color: #263238;
     overflow: hidden;
     text-align: center;
+    position: absolute;
+    top: 40px;
+    right: 0;
+    bottom: 150px;
+    left: 0;
+    padding: 10px;
 }  
 
 .imageReader .mainImage img {
@@ -2616,6 +2622,10 @@ ul .elementSettings {
     height: 150px;
     width: auto;
     padding: 5px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }    
 
 .imageReader .previewImages img {
@@ -2831,7 +2841,7 @@ color:#FFFFFF;
     
 }
 
-#pepperSteakItemÃƒâ€šÃ‚Â {
+#pepperSteakItemÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â {
     background-color: #72aa00; 
 }
 
@@ -2930,7 +2940,7 @@ color:#FFFFFF;
 .white-gradient {
     background-color: rgb(255, 255, 255);font-family: Ubuntu;
     color:  #313131;
-    font-size: 16px; /* NÃƒÆ’Ã‚Â¤herungswert aufgrund einer Schriftersetzung */
+    font-size: 16px; /* NÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¤herungswert aufgrund einer Schriftersetzung */
     font-weight: 300;
     text-align: left;
 }
@@ -2944,11 +2954,11 @@ color:#FFFFFF;
     box-sizing: border-box;
 }
 
-.floatRightÃƒâ€šÃ‚Â {
+.floatRightÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â {
     float: right;
 }
 
-.clearÃƒâ€šÃ‚Â {
+.clearÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â {
     clear: both;
 }
 
@@ -3995,7 +4005,7 @@ display: block;
 
 
 
-#profileWrapÃƒâ€šÃ‚Â {
+#profileWrapÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â {
     position: absolute;
     margin-top: 20%;
     margin-left: 50%;
@@ -4825,21 +4835,19 @@ a#text {}
                         #calendarMainFrame .calendarPrivacyTrigger .icon{
                             float:right;
                             display:none
-                        }
+                        ;
+                            margin-top: 3px;
+}
                         
                         
                         #calendarMainFrame .calendarPrivacyTrigger .blue-check{
-                            display:block;
+                            display: inline-block;
                         }
                         #calendarMainFrame .calendarPrivacyTrigger.active .blue-check{
                             display:none;
                         }
                         #calendarMainFrame .calendarPrivacyTrigger.active .white-check{
-                            display: block;
-                        }
-                        
-                        #calendarMainFrame #side .icon{
-                            margin-bottom: -5px;
+                            display: inline-block;
                         }
                         
                         
