--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -1386,13 +1386,6 @@ span.icon.blue-chevron-down {}
     margin-left: 10px;
 }
 
-#filesystem .frameRight span.emptyFileList  {
-    padding-left: 10px;
-    padding-right: 10px;
-    display: block;
-    min-height: 45px;
-}
-
 #filesystem .tabFrame .frameRight > ul > li  {
     display: inline-block;
     width: 100%;
@@ -1400,8 +1393,23 @@ span.icon.blue-chevron-down {}
     line-height: 2.6;
 }
 
-#filesystem .tabFrame .frameRight > ul > li:hover{
+#filesystem .frameRight > ul > li:hover{
     background-color: #cfd8dc;
+}
+
+#filesystem .frameRight > ul span.emptyFileList  {
+    padding-left: 10px;
+    padding-right: 10px;
+    display: block;
+    min-height: 45px;
+}
+
+#filesystem .frameRight > ul  span.emptyFileList  {
+    background-color: #FFFFFF;
+}
+
+#filesystem .frameRight > ul span.emptyFileList:hover{
+    background-color: #FFFFFF;
 }
 
 #filesystem .tabFrame .frameRight #blueList, #filesystem .tabFrame .frameRight #greySmall, #filesystem .tabFrame .frameRight #greyLarge {
@@ -2223,6 +2231,11 @@ ul .elementSettings {
 }
 
 
+#reader .readerStartpage .welcomearea .userPicture img {
+    width: 40px;
+}
+
+
 #reader .readerStartpage .welcomearea .welcomeText {
     padding: 30px 0 0 0;
 }
@@ -2257,6 +2270,15 @@ ul .elementSettings {
 
 #reader .readerStartpage .navi li:first-of-type {
     width: 40px;
+    background-color: #00bcd4;
+}
+
+#reader .readerStartpage .navi li:first-of-type:hover {
+    background-color:  #37474f;
+}
+
+#reader .readerStartpage .navi li:first-of-type span{
+    margin-top: 3px;
 }
 
 #reader .readerStartpage .tabs .singletab {
@@ -2297,9 +2319,14 @@ ul .elementSettings {
     cursor: pointer;
 }
 
-#reader .readerStartpage .tabs .singletab .sectionA > .itemsA > ul > li.active,
-#reader .readerStartpage .tabs .singletab .sectionB > .itemsB > ul > li.active  {
-    background-color: #cfd8dc;
+#reader .readerStartpage .tabs .singletab .sectionA > .itemsA .emptyHistory {
+    width: 100%;
+    cursor: default;
+    background-color: #FFFFFF;
+}
+
+#reader .readerStartpage .tabs .singletab .sectionA > .itemsA .emptyHistory:hover {
+    background-color: #FFFFFF;
 }
 
 #reader .readerStartpage .tabs .singletab .sectionA, #reader .readerStartpage .tabs .singletab .sectionB {
@@ -4160,6 +4187,9 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 .uploadify {
 	position: relative;
 	margin-bottom: 1em;
+        font:normal ubuntu, arial,sans-serif!important;
+	font-family: ubuntu!important;
+	font-style: normal!important;
 }
 .uploadify-button {
 	background-color: #505050;
@@ -4179,7 +4209,9 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	background-repeat: no-repeat;
 	border: 2px solid #808080;
 	color: #FFF;
-	font: normal 12px Arial, Helvetica, sans-serif;
+	font:normal ubuntu, arial,sans-serif;
+	font-family: ubuntu;
+	font-style: normal;
 	text-align: center;
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 	width: 100%;
@@ -4205,15 +4237,11 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	color: #808080;
 }
 .uploadify-queue {
-	position: absolute;
 	margin-bottom: 1em;
 	color: #1c1c1c;
 }
 .uploadify-queue-item {
 	background-color: #F5F5F5;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
 	font: 11px Verdana, Geneva, sans-serif;
 	margin-top: 5px;
 	padding: 10px;
