--- a/views/guestpage/guest_area.html
+++ b/views/guestpage/guest_area.html
@@ -1,7 +1,7 @@
 
         <div id="guestArea">
             <img src="gfx/guest/guest_header.svg" alt="universe" id="header">
-            <img src="gfx/guest/guest_subheader.svg" alt="universe" id="subheader">
+            <p style="color:#FFF; font-size: 38px;" id="subheader">Welcome to the universeOS – the first social webOS</p>
             <div class="guestBox registerBox">
                 <h2>Sign Up</h2>
                 <div class="pull-left">
@@ -23,7 +23,7 @@
                     <li><img src="gfx/guest/icon_01.svg"><span>encrypt your data<br>and communication</span></li>
                     <li><img src="gfx/guest/icon_02.svg"><span>present yourself and<br>stay in touch with your buddies</span></li>
                     <li><img src="gfx/guest/icon_03.svg"><span>save, organize and<br>share your files</span></li>
-                    <li><img src="gfx/guest/icon_04.svg"><span>use public files and<br>make your files accessable</span></li>
+                    <li><img src="gfx/guest/icon_04.svg"><span>use public files and<br>make your files accessible</span></li>
                 </ul>
             </div>
         </div>
