--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -19,7 +19,7 @@ body {
 	margin: 0;
 	padding: 0;
 	word-wrap: break-word;
-        background: url('../../img/bg.jpg') no-repeat 100%;
+        background: url('../../gfx/bg.jpg') no-repeat 100%;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
         -khtml-user-select: none;
