--- a/views/header/scripts.html
+++ b/views/header/scripts.html
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="inc/js/plugins.js"></script>
+<script type="text/javascript" src="inc/js/config.js"></script>
 <script type="text/javascript" src="inc/js/functions.js"></script>
 <script src="inc/js/bootstrap.min.js"></script>
 <script src="inc/plugins/ckeditor/ckeditor.js"></script>
